# ollama-optimizer

./: LICENSE  README.md  pyproject.toml
docs/: CODE_CHANGES.md  research_paper.tex
ollama_optimizer/: __init__.py  __main__.py  benchmark.py  cli.py  ollama_client.py  optimizer.py  quantization.py  reporter.py  system_profiler.py
