[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-optimizer"
version = "1.0.0"
description = "Cross-platform tool to optimize Ollama models using quantization techniques. Benchmarks before/after and recommends optimal quantization for your hardware."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Ollama Optimizer Contributors"}
]
keywords = ["ollama", "quantization", "llm", "optimization", "benchmark", "gguf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.28.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "psutil>=5.9.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
gpu = ["GPUtil>=1.4.0"]
dev = ["pytest>=7.0", "pytest-mock>=3.10"]

[project.scripts]
ollama-optimizer = "ollama_optimizer.cli:main"

[project.urls]
Homepage = "https://github.com/ollama-optimizer/ollama-optimizer"
Documentation = "https://github.com/ollama-optimizer/ollama-optimizer#readme"
Issues = "https://github.com/ollama-optimizer/ollama-optimizer/issues"

[tool.setuptools.packages.find]
include = ["ollama_optimizer*"]
